--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.10.7",
     "discord.js": "^13.6.0",
     "lodash": "^4.17.21",
+    "node-schedule": "^2.1.0",
     "promise-throttle": "^1.1.2"
   }
 }
